--- a/report/references.bib
+++ b/report/references.bib
@@ -1,128 +1,33 @@
-@misc{kaggle-loan-eligibility,
-  title        = {Loan Eligibility Prediction Dataset},
-  author       = {Prabhakaran, Avinesh},
-  year         = {2020},
+@misc{kaggle_loan_data,
+  author = {Prabhakaran, Avinesh},
+  title = {Loan Eligibility Prediction DataSet},
+  year = {2020},
+  publisher = {Kaggle},
   howpublished = {\url{https://www.kaggle.com/datasets/avineshprabhakaran/loan-eligibility-prediction}},
-  note         = {Accessed: 2025}
+  note = {Accessed: December 2024}
 }
 
-@book{hosmer2013appliedlogistic,
-  title     = {Applied Logistic Regression},
-  author    = {Hosmer, David W. and Lemeshow, Stanley and Sturdivant, Rodney X.},
-  publisher = {Wiley},
-  edition   = {3},
-  year      = {2013}
+@article{sklearn,
+  title={Scikit-learn: Machine Learning in {P}ython},
+  author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+  journal={Journal of Machine Learning Research},
+  volume={12},
+  pages={2825--2830},
+  year={2011}
 }
 
-@article{fawcett2006roc,
-  title   = {An Introduction to ROC Analysis},
-  author  = {Fawcett, Tom},
-  journal = {Pattern Recognition Letters},
-  volume  = {27},
-  number  = {8},
-  pages   = {861--874},
-  year    = {2006}
+@book{james2013introduction,
+  title={An Introduction to Statistical Learning: with Applications in R},
+  author={James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
+  year={2013},
+  publisher={Springer},
+  edition={1st}
 }
 
-@article{saito2015precisionrecall,
-  title   = {The Precision-Recall Plot is More Informative than the ROC Plot when Evaluating Binary Classifiers on Imbalanced Datasets},
-  author  = {Saito, Takaya and Rehmsmeier, Marc},
-  journal = {PLOS ONE},
-  volume  = {10},
-  number  = {3},
-  pages   = {e0118432},
-  year    = {2015}
-}
-
-@book{powers2011evaluation,
-  title     = {Evaluation: From Precision, Recall and F-Measure to ROC, Informedness, Markedness and Correlation},
-  author    = {Powers, David M. W.},
-  publisher = {Springer},
-  year      = {2011}
-}
-
-@article{hunter2007matplotlib,
-  title   = {Matplotlib: A 2D Graphics Environment},
-  author  = {Hunter, John D.},
-  journal = {Computing in Science \& Engineering},
-  volume  = {9},
-  number  = {3},
-  pages   = {90--95},
-  year    = {2007}
-}
-
-@article{waskom2021seaborn,
-  title   = {Seaborn: Statistical Data Visualization},
-  author  = {Waskom, Michael L.},
-  journal = {Journal of Open Source Software},
-  volume  = {6},
-  number  = {60},
-  pages   = {3021},
-  year    = {2021}
-}
-
-@article{harris2020array,
-  title   = {Array Programming with {NumPy}},
-  author  = {Harris, Charles R. and Millman, K. Jarrod and van der Walt, St{\'e}fan J. and Gommers, Ralf and others},
-  journal = {Nature},
-  volume  = {585},
-  number  = {7825},
-  pages   = {357--362},
-  year    = {2020}
-}
-
-@misc{pandas,
-  title        = {pandas: Python Data Analysis Library},
-  author       = {{The pandas development team}},
-  year         = {2023},
-  howpublished = {\url{https://pandas.pydata.org}},
-  note         = {Accessed: 2025}
-}
-
-@misc{scikit-learn,
-  title        = {Scikit-learn: Machine Learning in Python},
-  author       = {Pedregosa, Fabian and others},
-  year         = {2011},
-  howpublished = {\url{https://scikit-learn.org/stable/}},
-  note         = {Accessed: 2025}
-}
-
-@misc{click,
-  title        = {Click: Command Line Interface Creation Kit},
-  author       = {Ronacher, Armin},
-  year         = {2024},
-  howpublished = {\url{https://click.palletsprojects.com}},
-  note         = {Accessed: 2025}
-}
-
-@misc{quarto,
-  title        = {Quarto},
-  author       = {{Posit, PBC}},
-  year         = {2024},
-  howpublished = {\url{https://quarto.org}},
-  note         = {Accessed: 2025}
-}
-
-@misc{docker,
-  title        = {Docker Documentation},
-  author       = {{Docker Inc.}},
-  year         = {2024},
-  howpublished = {\url{https://docs.docker.com}},
-  note         = {Accessed: 2025}
-}
-
-@misc{chatgpt,
-  title        = {ChatGPT},
-  author       = {{OpenAI}},
-  year         = {2024},
-  howpublished = {\url{https://chat.openai.com}},
-  note         = {Used to assist with restructuring and improving the clarity of the analysis narrative}
-}
-
-@misc{dsci522,
-  title        = {DSCI 522: Data Science Workflows},
-  author       = {{University of British Columbia}},
-  year         = {2025},
-  howpublished = {\url{https://masterdatascience.ubc.ca/courses/dsci-522}},
-  note         = {Course textbook and instructional materials}
+@book{hosmer2013applied,
+  title={Applied Logistic Regression},
+  author={Hosmer Jr, David W and Lemeshow, Stanley and Sturdivant, Rodney X},
+  year={2013},
+  publisher={John Wiley \& Sons},
+  edition={3rd}
 }
